--- a/style.css
+++ b/style.css
@@ -3,7 +3,6 @@ body {
     padding-top: 800px;
     text-align: center;
     background: linear-gradient(#60ebeb 0%, #27ae60 100%);
-
 }
 
 .paris {
@@ -33,6 +32,7 @@ h1 {
     font-family: monospace;
     font-weight: 300;
     color: darkmagenta;
+    text-shadow: 2px 2px white;
 }
 
 p {
