--- a/style.css
+++ b/style.css
@@ -62,3 +62,10 @@ p {
 .links:hover {
     background-color: dodgerblue;
 }
+img {
+    transition: transform .2s;
+    border: 10px solid #aaaaaa;
+}
+img:hover{
+    transform: scale(0.9);
+}
