--- a/style.css
+++ b/style.css
@@ -69,3 +69,13 @@ img {
 img:hover{
     transform: scale(0.9);
 }
+contact iframe {
+width: 100%;
+}
+.contact_1 a{
+    color: white;
+    text-shadow: none;
+}
+.contact_1 h3{
+    display: inline;
+}
